--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -9,9 +9,37 @@
 	</head>
 	<body>
 		<nav>
-			<h1>{{ site.title }}</h1>
+			<a href="/">{{ site.title }}</a>
+
+			<div>
+				<p>Products</p>
+
+				<ul>
+					{% for product in site.products %}
+						<li>
+							<a href="{{ product.url }}">{{ product.title }}</a>
+						</li>
+					{% endfor %}
+				</ul>
+			</div>
+
+			<div>
+				<ul>
+					{% for page in site.pages %}
+						<li>
+							<a href="{{ page.url }}">{{ page.title }}</a>
+						</li>
+					{% endfor %}
+				</ul>
+			</div>
 		</nav>
 
-		{{ content }}
+		<main>
+			{{ content }}
+		</main>
+
+		<footer>
+			&copy;2023 Bluth Fruit Company
+		</footer>
 	</body>
 </html>
