--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -4,8 +4,8 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<title>{% if page.title %}{{ page.title }} | {% endif %}{{ site.title }}</title>
-		<script defer src="/assets/main.js"></script>
-		<link rel="stylesheet" href="/assets/main.css" />
+		<script defer src="/assets/index.js"></script>
+		<link rel="stylesheet" href="/assets/index.css" />
 	</head>
 	<body>
 		<nav>
