--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<title>{% if page.title %}{{ page.title }} | {% endif %}{{ site.title }}</title>
-		<script defer src="/assets/index.js"></script>
+		<script defer type="module" src="/assets/index.js"></script>
 		<link rel="stylesheet" href="/assets/index.css" />
 	</head>
 	<body>
@@ -13,7 +13,13 @@
 
 			<span class="navbar__spacer"></span>
 
-			<a href="/cart">Cart</a>
+			<a href="/cart">
+				Cart
+				<output
+					data-cart-counter
+					title="Number of items in your cart"
+				></output>
+			</a>
 		</nav>
 
 		<main>
