--- a/assets/sass/_main.scss
+++ b/assets/sass/_main.scss
@@ -87,6 +87,31 @@ strong {
 	font-weight: bold;
 }
 
+button {
+	align-items: center;
+	background-color: $color__cta;
+	border-radius: $height__button / 2;
+	color: $color__text__ondark;
+	cursor: pointer;
+	display: inline-flex;
+	height: $height__button;
+	margin: $margin__x;
+	padding: 0 $margin__x * 2;
+	text-align: center;
+	text-transform: uppercase;
+	transition: color .2s, background-color .2s;
+
+	&:hover:not(:disabled) {
+		background-color: $color__cta__raise;
+	}
+
+	&:disabled {
+		background-color: #bbb;
+		color: #ddd;
+		cursor: wait;
+	}
+}
+
 .navbar {
 	align-items: center;
 	background-color: #fff;
@@ -102,6 +127,7 @@ strong {
 		justify-content: center;
 		padding: 0 $margin__x;
 		text-decoration: underline;
+		transition: color .2s;
 
 		&:hover {
 			color: $color__cta__raise;
@@ -166,23 +192,5 @@ header {
 	&__body {
 		flex-grow: 1;
 		padding: $margin__x;
-	}
-
-	&__addtocart {
-		align-items: center;
-		background-color: $color__cta;
-		border-radius: $height__button / 2;
-		color: $color__text__ondark;
-		cursor: pointer;
-		display: inline-flex;
-		height: $height__button;
-		margin: $margin__x;
-		padding: 0 $margin__x * 2;
-		text-align: center;
-		text-transform: uppercase;
-
-		&:hover {
-			background-color: $color__cta__raise;
-		}
 	}
 }
