--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -7,6 +7,17 @@
 		{% if jekyll.environment == "production" %}
 			<base href="/fruit/" />
 		{% endif %}
+
+		<!-- Google tag (gtag.js) -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-YJGBBE20RD"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag(){dataLayer.push(arguments);}
+			gtag('js', new Date());
+
+			gtag('config', 'G-YJGBBE20RD');
+		</script>
+
 		<script type="module" src="assets/index.js"></script>
 		<link rel="stylesheet" href="assets/index.css" />
 	</head>
