Update base href

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<title>{% if page.title %}{{ page.title }} | {% endif %}{{ site.title }}</title>
 		{% if jekyll.environment == "production" %}
-			<base href="/fruit/" />
+			<base href="https://fruit.robertakarobin.com/" />
 		{% endif %}
 
 		<!-- Google tag (gtag.js) -->
